Fix back button alignment

--- a/src/pages/DetailPage.css
+++ b/src/pages/DetailPage.css
@@ -126,3 +126,9 @@
   text-align: left;
   width: 100%;
 }
+
+.detail-back-btn-row {
+  display: flex;
+  justify-content: flex-start;
+  margin-bottom: 1.5rem;
+  margin-top: 
